# lipidlibrarian

./: .gitignore  .gitmodules  Containerfile  Dockerfile  LICENSE  Makefile  README.md  container-entrypoint.sh  docker-entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: deploy.yaml  publish.yaml  run_test.yaml
data/: adducts.csv
data/alex123/: alex123.schema.html
data/linex/: linex_data.pbz2
data/lipidlynxx/: pyproject.toml  setup.cfg
data/lipidontology/: lion_graph.tsv  lion_version.json
notebooks/: example_query.ipynb  goslin_test.ipynb  obonet_test.ipynb  rdkit_test.ipynb  sql_alex123.ipynb
scripts/: convert_lipidontology.py  database_convert_lion.ipynb  database_convert_lipidmaps.ipynb  database_convert_swisslipids.ipynb  database_inspect_lipidmaps.ipynb  database_inspect_swisslipids.ipynb  generate_linex_data.ipynb  lipidlynxx_setuptools.sh
src/lipid_librarian/: LipidQuery.py  cli.py
src/lipid_librarian/api/: Alex123API.py  LinexAPI.py  LipidAPI.py  LipidMapsAPI.py  LipidOntologyAPI.py  SwissLipidsAPI.py  __init__.py
src/lipid_librarian/lipid/: Lipid.py  Mass.py  OntologyTerm.py  Source.py  __init__.py
src/lipidlibrarian/: LipidQuery.py  cli.py  sync_alex123_sql_database.py
src/lipidlibrarian/api/: Alex123API.py  LinexAPI.py  LionAPI.py  LipidAPI.py  LipidLibrarianAPI.py  LipidMapsAPI.py  SwissLipidsAPI.py  __init__.py
src/lipidlibrarian/lipid/: Adduct.py  DatabaseIdentifier.py  Fragment.py  Level.py  Lipid.py  Nomenclature.py  Ontology.py  Reaction.py  StructureIdentifier.py  Synonym.py  __init__.py
test/: conftest.py  mock_http_helper.py  test_lipid_query.py
test/api/: lipid_name_test_matrix.py  mock_http_helper.py  test_api_alex123.py  test_api_lipidmaps.py  test_api_swisslipids.py
