[options]
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
lipid_librarian.data =
	adducts.csv
lipid_librarian.data.alex123 =
    alex123_db.h5
lipid_librarian.data.linex =
	linex_data.pbz2
lipid_librarian.data.lipid_ontology =
	lion_graph.tsv
	lion_association.tsv
