[options]
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
lipidlibrarian.data =
	adducts.csv
lipidlibrarian.data.alex123 =
    alex123_db.h5
lipidlibrarian.data.linex =
	linex_data.pbz2
lipidlibrarian.data.lion =
	lion_ontology_graph.obo
	lion_association_table.tsv
