[project]
name = "lipidlynxx"
version = "0.0.1"
requires-python = ">3, <3.12"
license = {text = "GPLv3"}
description = ""
readme = "README.md"
authors = [

]
maintainers = [

]
keywords = [
    "Lipidomics", "Lipid Identifictaion", "Bioinformatics"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "aiofiles>=0.5.0",
    "aiohttp>=3.6.2",
    "click>=7.1.2",
    "click-spinner>=0.1.10",
    "fastapi>=0.61.1",
    "jsonschema==3.2.0",
    "natsort==7.0.1",
    "nbformat>=5.0.7",
    "numpy>=1.19.2",
    "openpyxl>=3.0.5",
    "pandas>=1.1.2",
    "pydantic>=1.6.1",
    "pytest>=6.1.0",
    "python-multipart>=0.0.5",
    "regex~=2020.9.27",
    "requests>=2.24.0",
    "starlette==0.13.6",
    "typer>=0.3.2",
    "uvicorn>=0.12.0",
    "xlrd>=1.2.0",
    "xlwt>=1.3.0",
    "pyzmq>=19.0.2"
]


[project.optional-dependencies]
dev = ["pytest", "flake8"]
test = [
    "pytest"
]
lint = [
    "flake8"
]

[tool.flake8]
max-line-length = 80


[tool.pytest.ini_options]
testpaths = [
    "test"
]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
lynx-daemon = "lynx.daemon:daemon_lynx"
lynx-cli = "lynx.tools:cli_app"
lynx-gui = "lynx.LipidLynxX:gui_app"
