[options]
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
lynx =
    config.ini
lynx.configurations =
    *.json
lynx.configurations.resources =
    *.json
lynx.configurations.rules.input =
    *.json
lynx.configurations.rules.output =
    *.json
lynx.models.schema = 
    *.json
lynx.static.files =
    *.csv
lynx.static.images = 
    *.svg
    *.png
    *.jpg
lynx.templates =
    *.html
